fixing overlaps

--- a/firstHTML/main.css
+++ b/firstHTML/main.css
@@ -72,7 +72,7 @@
             font-family: 'Miriam Libre', sans-serif;
             font-style: normal;
             font-weight: bold;
-            font-size: 1.2vw;
+            font-size: 1.1vw;
             color: rgb(5, 39, 1);
             letter-spacing: 1px;
         }
@@ -88,7 +88,7 @@
         }
 
         .footer img {
-            height: 270px;
+            height: 25vh;
             border-radius: 10px;
             box-shadow: 0 0 8px 8px #0fa36b;
         }
